--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
-<html></html>
-    <head>
-        <title>Jagargud.se</title>
-    </head>
-    <body>
-        <h1>Jagargud.se</h1>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jag är Gud</title>
+    <style>
+        body {
+            margin: 0;
+            background-color: #0000FF;
+        }
+        .img {
+            width: 100vw;
+            height: 100vh;
+            object-fit: cover;
+        }
+    </style>
+</head>
+<body onclick="window.location.href='https://kulturhusetstadsteatern.se/teater/jag-ar-gud';">
+    <img src="jagargud.png">
+</body>
 </html>
