--- a/index.html
+++ b/index.html
@@ -1,36 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jag är Gud</title>
-    <style>
-        body {
-            margin: 0;
-            background-color: #0000FF;
-            overflow: hidden; /* Prevents scrollbars */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        a {
-            display: block;
-            width: calc(100vw - 20px); /* Adds 10px padding on each side */
-            height: calc(100vh - 20px); /* Adds 10px padding top and bottom */
-        }
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain; /* Ensures image always fits within the viewport */
-            padding: 10px;
-            box-sizing: border-box;
-        }
-    </style>
-</head>
-<body>
-    <a href="https://kulturhusetstadsteatern.se/teater/jag-ar-gud">
-        <img src="jagargud.png" class="img" alt="Jag är Gud">
-    </a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JAG ÄR GUD</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="slideshow-container">
+      <div
+        class="slide active"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-01-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-02-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-03-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-04-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-05-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-06-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-07-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-08-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-09-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-10-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-11-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-12-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-13-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-14-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-15-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-16-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-17-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-18-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-19-1920x1080.jpg');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('img/jag-ar-gud-photo-rose-hallgren-20-1920x1080.jpg');
+        "
+      ></div>
+    </div>
+    <div class="text-overlay">
+      <p>
+        Efter sex utsålda föreställningar på Stadsteatern har JAG ÄR GUD nått
+        över 600 personer. Tack till alla som har delat denna upplevelse med
+        oss, vi är otroligt tacksamma för responsen, inte minst den fina
+        recensionen i
+        <a
+          href="https://www.svd.se/a/lwQXqe/recension-danne-dahlins-monolog-jag-ar-gud-ar-modig"
+          target="_blank"
+          >SvD av Anna Ångström</a
+        >:
+      </p>
+      <p class="quote">
+        "Danne Dahlin låter oss se sin erfarenhet genom stormens öga, en lugn
+        plats i kaos. [...] När Danne Dahlin tar makten över sin självutlämnande
+        berättelse är det modigt, mänskligt och vackert."
+      </p>
+      <p>
+        JAG ÄR GUD är en självbiografisk föreställning om en bipolär sjukdom som
+        slukar allt – och den nästan omöjliga uppgiften att bygga och stå ut med
+        ett normalt liv. Om du är intresserad av att hjälpa föreställningen ut i
+        landet, hör av dig.
+      </p>
+      <p>
+        Av och manus: <a href="https://instagram.com/">Danne Dahlin</a><br />
+        Manus och regi: <a href="https://instagram.com/">Jakob Bladh</a><br />
+        Scenografi: <a href="https://instagram.com/">Rose Hallgren</a><br />
+        Video och ljus: <a href="https://instagram.com/">Jonas Johansson</a
+        ><br />
+        Ljud: <a href="https://instagram.com/">Amadeus Rudolfsson</a><br />
+        Mentor: <a href="https://instagram.com/">Teresia Björk</a>
+      </p>
+
+      <p>Kontakt: <a href="mailto:info@jagargud.se">info@jagargud.se</a></p>
+    </div>
+
+    <script>
+      const slides = document.querySelectorAll(".slide");
+      let currentIndex = 0;
+
+      function showNextSlide() {
+        slides[currentIndex].classList.remove("active");
+        currentIndex = (currentIndex + 1) % slides.length;
+        slides[currentIndex].classList.add("active");
+      }
+
+      setInterval(showNextSlide, 7000); // Change slide every 7 seconds
+    </script>
+  </body>
 </html>
