--- a/index.html
+++ b/index.html
@@ -150,10 +150,11 @@
         JAG ÄR GUD är en självbiografisk föreställning om en bipolär sjukdom som
         slukar allt – och den nästan omöjliga uppgiften att bygga och stå ut med
         ett normalt liv. Om du är intresserad av att hjälpa föreställningen ut i
-        landet, hör av dig.
+        landet, <a href="mailto:kontakt@jagargud.se">hör av dig</a>.
       </p>
       <p>
-        Av och manus: <a href="https://instagram.com/">Danne Dahlin</a><br />
+        Av, med och manus: <a href="https://instagram.com/">Danne Dahlin</a
+        ><br />
         Manus och regi: <a href="https://instagram.com/">Jakob Bladh</a><br />
         Scenografi: <a href="https://instagram.com/">Rose Hallgren</a><br />
         Video och ljus: <a href="https://instagram.com/">Jonas Johansson</a
@@ -162,7 +163,7 @@
         Mentor: <a href="https://instagram.com/">Teresia Björk</a>
       </p>
 
-      <p>Kontakt: <a href="mailto:info@jagargud.se">info@jagargud.se</a></p>
+      <p>Kontakt: <a href="mailto:kontakt@jagargud.se">info@jagargud.se</a></p>
     </div>
 
     <script>
