--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JAG ÄR GUD</title>
     <link rel="stylesheet" href="style.css" />
+    <meta property="og:title" content="scree" />
+    <meta property="og:description" content="scree" />
+    <meta property="og:image" content="https://jagargud.se/background.jpg" />
+    <meta property="og:url" content="https://jagargud.se" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div class="slideshow-container">
