--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JAG ÄR GUD</title>
     <link rel="stylesheet" href="style.css" />
-    <meta property="og:title" content="scree" />
-    <meta property="og:description" content="scree" />
+    <meta property="og:title" content="JAG ÄR GUD" />
+    <meta property="og:description" content="JAG ÄR GUD" />
     <meta property="og:image" content="https://jagargud.se/background.jpg" />
     <meta property="og:url" content="https://jagargud.se" />
     <meta property="og:type" content="website" />
