--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>JAG ÄR GUD</title>
     <link rel="stylesheet" href="style.css" />
     <meta property="og:title" content="JAG ÄR GUD" />
-    <meta property="og:description" content="JAG ÄR GUD" />
+    <meta
+      property="og:description"
+      content="JAG ÄR GUD är en självbiografisk föreställning om en bipolär sjukdom som
+    slukar allt – och den nästan omöjliga uppgiften att bygga och stå ut med
+    ett normalt liv."
+    />
     <meta property="og:image" content="https://jagargud.se/background.jpg" />
     <meta property="og:url" content="https://jagargud.se" />
     <meta property="og:type" content="website" />
